# strata

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE
crates/strata-cli/: Cargo.toml
crates/strata-cli/src/: eval.rs  host.rs  lib.rs  main.rs
crates/strata-cli/tests/: cli_integration.rs  host_integration.rs
crates/strata-types/: Cargo.toml
crates/strata-types/src/: adt.rs  checker.rs  checker_tests.rs  effects.rs  exhaustive.rs  lib.rs  move_check.rs  profile.rs  ty.rs  types.rs
crates/strata-types/src/infer/: constraint.rs  ctx.rs  solver.rs  subst.rs  tests.rs  ty.rs  unifier.rs
crates/strata-types/tests/: capabilities.rs  effects.rs  functions.rs  move_check.rs
docs/: DESIGN_DECISIONS.md  DETERMINISM_AUDIT.md  DEV_WORKFLOW.md  EFFECTS_AND_PROFILES.md  IMPLEMENTED.md  IN_PROGRESS.md  KILLER_DEMOS.md  NON_GOALS.md  ROADMAP.md  STRATA_CHARTER.md  STYLE_GUIDE.md  TESTING.md  WORKSPACE_CONTRACT.md  effects-and-caps.md  feature-candidates.md  logic-explainability.md  profiles.md  roadmap.md  strata-workflow.md
examples/: README.md  add.strata  capabilities.strata  cli1.strata  cli2.strata  complex_types.strata  deploy.strata  effects_basic.strata  effects_hof.strata  factorial.strata  format1.strata  max.strata  ok1.strata  ok2.strata  ops1.strata  ops3.strata  ops4.strata  option.strata  result.strata  struct.strata  sum.strata  tuple.strata  type_check_annotation_mismatch.strata  type_check_bad.strata  type_check_good.strata  type_check_unknown_var.strata  type_error.strata  (+4 more)
(+50 files in other folders)
