[package]
name = "strata-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "strata_cli"
path = "src/lib.rs"

[[bin]]
name = "strata-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
strata-parse = { path = "../strata-parse" }
strata-ast   = { path = "../strata-ast" }
strata-types = { path = "../strata-types" }

[dev-dependencies]
tempfile = "3"
